--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ footer .svg_icon_wrapper_block a:focus{
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 20%), 0px 1px 3px 0px rgba(0, 0, 0, 12%), 0px 1px 1px 0px rgba(0, 0, 0, 14%);
     width: 408px;
     min-height: 584px;
-    transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .form{
@@ -439,7 +439,12 @@ footer .svg_icon_wrapper_block a:focus{
     display: flex;
     flex-direction: column;
 }
-
+.form_wrapper_container{
+    margin-bottom: 8px;
+}
+.label_wrapper_container{
+    position: relative;
+}
 .svg_close_button{
     position: absolute;
     top: 24px;
@@ -464,8 +469,19 @@ footer .svg_icon_wrapper_block a:focus{
     background-color: #404BBF;
     border: none;
 }
+.svg_icon_close_container{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .svg_icon_container{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal_title{
     margin-bottom: 16px;
@@ -475,17 +491,22 @@ footer .svg_icon_wrapper_block a:focus{
     width: 100%;
     height: 40px;
     border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 40%);
+    border: 1px solid rgba(46, 47, 66, 0.4);
     margin: 4px 0 8px 0;
     padding: 0 0 0 38px;
+    background-color: transparent; 
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .form input:focus{
-    border: 1px solid #4D5AE5;
+     border-color: #4D5AE5; 
 }
 .form_label{
-    position: relative;
     color: #8E8F99;
     fill: #2E2F42;
+    line-height: 1.17;
+    display: block;
+    margin-bottom: 4px;
 }
 .form_label:focus-within {
     fill: #4D5AE5;
