--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,12 @@ footer .svg_icon_wrapper_block a:focus{
 .form_wrapper_container{
     margin-bottom: 8px;
 }
+.form_wrapper_containe:nth-child(4){
+    margin-bottom: 16px;
+}
+.form_wrapper_containe:nth-child(5){
+    margin-bottom: 24px;
+}
 .label_wrapper_container{
     position: relative;
 }
@@ -498,8 +504,11 @@ footer .svg_icon_wrapper_block a:focus{
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.form input:focus{
+.label_wrapper_container input:focus{
      border-color: #4D5AE5; 
+}
+{
+    fill: #4D5AE5;
 }
 .form_label{
     color: #8E8F99;
@@ -516,14 +525,23 @@ footer .svg_icon_wrapper_block a:focus{
     left: 19px;
     top: 27px;
 }
-.form_label textarea{
+.comment_textarea{
     width: 100%;
     height: 120px;
     padding: 8px 16px 8px 16px;
     resize: none;
     border-radius: 4px;
-    border: 1px solid rgba(46, 47, 66, 40%);
-    margin: 4px 0 16px 0;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin: 8px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em; 
+    color: rgba(46, 47, 66, 0.4);
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.comment_textarea:focus{
+    border-color: #4D5AE5; 
 }
 .policy_section{
     display: flex;
@@ -538,13 +556,32 @@ footer .svg_icon_wrapper_block a:focus{
 }
 .policy_acception_text{
     color: #8E8F99;
+    font-size: 12px;
+    line-height: 1.17; 
+    letter-spacing: 0.04em; 
+
 }
-.policy_acception_text a{
-    color: #4D5AE5;
-    text-decoration: underline;
+.policy_form_span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent; 
+}
+.policy_section input:checked + .policy_form_span{
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
+}
+.privacy_policy_text{
+    color: #4d5ae5;
 }
 .form_button{
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 15%);
@@ -552,7 +589,9 @@ footer .svg_icon_wrapper_block a:focus{
     margin: 0 auto;
     color: #FFFFFF;
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
+
 .form_button:hover{
     background-color: #404BBF;
 }
