--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,7 @@ footer .svg_icon_wrapper_block a:focus{
     transform: translate(-50%, -50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.svg_icon_container{
+.modal .svg_icon_container{
     position: absolute;
     left: 16px;
     top: 50%;
@@ -518,10 +518,8 @@ footer .svg_icon_wrapper_block a:focus{
 .form_label:focus-within {
     fill: #4D5AE5;
 }
-.form_label .svg_icon_container{
-    position: absolute;
-    left: 19px;
-    top: 27px;
+.form_input:focus + .svg_icon_container{
+    fill: #4D5AE5;  
 }
 .comment_textarea{
     width: 100%;
@@ -530,7 +528,6 @@ footer .svg_icon_wrapper_block a:focus{
     resize: none;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    margin: 8px 16px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em; 
@@ -592,4 +589,41 @@ footer .svg_icon_wrapper_block a:focus{
 
 .form_button:hover{
     background-color: #404BBF;
+}
+.footer_form_title{
+    color: #ffffff;
+}
+.footer_form{
+    display: flex;
+}
+.footer_form_input{
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff; 
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2px;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
+    border-radius: 4px; 
+    color: #ffffff;   
+}
+.footer_form_input::placeholder{
+    color: #ffffff;   
+}
+.footer_form_button{
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
+.footer_form svg{
+    margin-left: 16px;
+    fill: #FFFFFF;
 }
