--- a/css/style.css
+++ b/css/style.css
@@ -390,6 +390,9 @@ header .container{
 .social_media_title{
      margin-bottom: 16px;
 }
+.social_media_container{
+    margin-right: 80px;
+}
 .social_media_container p{
     color: #FFFFFF;
 }
@@ -442,10 +445,10 @@ footer .svg_icon_wrapper_block a:focus{
 .form_wrapper_container{
     margin-bottom: 8px;
 }
-.form_wrapper_containe:nth-child(4){
+.comment_form_wrapper_container{
     margin-bottom: 16px;
 }
-.form_wrapper_containe:nth-child(5){
+.policy_section{
     margin-bottom: 24px;
 }
 .label_wrapper_container{
@@ -533,6 +536,7 @@ footer .svg_icon_wrapper_block a:focus{
     letter-spacing: 0.04em; 
     color: rgba(46, 47, 66, 0.4);
     outline: transparent;
+    background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .comment_textarea:focus{
@@ -592,9 +596,11 @@ footer .svg_icon_wrapper_block a:focus{
 }
 .footer_form_title{
     color: #ffffff;
+    margin-bottom: 16px;
 }
 .footer_form{
     display: flex;
+    gap: 24px;
 }
 .footer_form_input{
     width: 264px;
@@ -602,7 +608,7 @@ footer .svg_icon_wrapper_block a:focus{
     border: 1px solid #ffffff; 
     background-color: transparent;
     font-size: 12px;
-    line-height: 2px;
+    line-height: 2;
     letter-spacing: 0.04em;
     padding-left: 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
